--- a/docs/src/app/(docs)/react/components/select/demos/grouped/css-modules/index.module.css
+++ b/docs/src/app/(docs)/react/components/select/demos/grouped/css-modules/index.module.css
@@ -131,6 +131,8 @@
   position: sticky;
   z-index: 1;
   top: 0;
+  margin: 0 0.5rem 0 0; /* Prevent overlap with iOS overlay scrollbars. */
+  width: calc(100% - 0.5rem);
 }
 
 .Item {
